# cpp-cmake-empty-project

./: .clang-format  .clangd  CMakeLists.txt  build.sh  install_deps.sh  run.sh  test.sh
src/: CMakeLists.txt  app.cpp  main.cpp
test/: CMakeLists.txt  test_main.cpp
